--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <android.support.v4.widget.DrawerLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:screenOrientation="portrait"
     android:id="@+id/drawerview"
     android:layout_gravity="center_horizontal|top"
     xmlns:android="http://schemas.android.com/apk/res/android">
