Fixed Leaderboard for points

--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:background="#010101"
             android:id="@+id/savebuttoneditprofile"
-            android:src="@drawable/ic_launcher"
+            android:src="@drawable/bench"
             android:layout_gravity="left|bottom"
             android:layout_marginBottom="54dp"
             android:layout_alignParentBottom="true"
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             android:background="#010101"
             android:id="@+id/exiteditprofile"
-            android:src="@drawable/ic_launcher2"
+            android:src="@drawable/bench"
             android:layout_gravity="left|bottom"
             android:layout_alignTop="@+id/savebuttoneditprofile"
             android:layout_alignStart="@+id/editphone"
