--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -257,7 +257,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/undernorm"
             android:text="18"
-            android:textColor="#010101"
+            android:textColor="#ffffff"
             android:textSize="15dp"
             android:layout_toEndOf="@+id/under"
             android:layout_below="@+id/under"
@@ -268,7 +268,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/normover"
             android:text="25"
-            android:textColor="#010101"
+            android:textColor="#ffffff"
             android:textSize="15dp"
             android:layout_toEndOf="@+id/normal"
             android:layout_below="@+id/normal"
@@ -279,7 +279,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/overbese"
             android:text="30"
-            android:textColor="#010101"
+            android:textColor="#ffffff"
             android:textSize="15dp"
             android:layout_toEndOf="@+id/over"
             android:layout_below="@+id/over"
