Keypad trial for profile page

--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -73,6 +73,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/CurrWdescrip"
             android:text="Weight: "
+            android:inputType="number"
+            android:digits="1234567890"
             android:textColor="#ffffff"
             android:textSize="23dp"
             android:layout_alignTop="@+id/CurrW"
@@ -95,6 +97,8 @@
             android:text="(lbs)"
             android:layout_gravity="center"
             android:textColor="#ffffff"
+            android:inputType="number"
+            android:digits="1234567890"
             android:textSize="30dp"
             android:layout_toEndOf="@+id/CurrW"
             android:layout_below="@+id/textView1"
@@ -114,6 +118,8 @@
             android:text="Height: "
             android:layout_gravity="center"
             android:textColor="#ffffff"
+            android:inputType="number"
+            android:digits="1234567890"
             android:textSize="23dp"
             android:layout_below="@+id/textView3"
             android:layout_toStartOf="@+id/CurrH" />
@@ -122,6 +128,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/CurrH"
             android:text="0"
+            android:inputType="number"
+            android:digits="1234567890"
             android:layout_gravity="center"
             android:textColor="#ffffff"
             android:textSize="30dp"
@@ -149,6 +157,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/CurrHinch"
             android:text="(in)"
+            android:inputType="number"
+            android:digits="1234567890"
             android:layout_gravity="center"
             android:textColor="#ffffff"
             android:textSize="30dp"
