--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -136,6 +136,7 @@
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay5s"
+            android:layout_below = "@+id/legPressDescrpition"
             android:layout_gravity="right|bottom"
             />
 
