--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -113,23 +113,13 @@
             android:textColor="#ffffff"
             />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="BACK"
-            android:id="@+id/Sday3BACK"
-            android:layout_gravity="left|bottom"
-            android:layout_below="@+id/calfpresspic"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            />
-
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay3s"
+            android:layout_below = "@+id/shrugDescription"
             android:layout_gravity="right|bottom"
             />
 
