--- a/app/src/main/res/layout/fragment_weightloss_day_two.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_two.xml
@@ -115,6 +115,7 @@
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay2w"
+            android:layout_below = "@+id/plankDetail"
             android:layout_gravity="right|bottom"
             />
 
