--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -131,6 +131,7 @@
         android:layout_height="wrap_content"
         android:text="Workout Complete!"
         android:id="@+id/completeDay3bb"
+        android:layout_below = "@+id/closegripPushupDetail"
         android:layout_gravity="right|bottom" />
 
     </LinearLayout>>
