--- a/app/src/main/res/layout/fragment_body_building_one.xml
+++ b/app/src/main/res/layout/fragment_body_building_one.xml
@@ -131,6 +131,7 @@
         android:layout_height="wrap_content"
         android:text="Workout Complete!"
         android:id="@+id/completeDay1bb"
+        android:layout_below = "@+id/hamstringDetail"
         android:layout_gravity="right|bottom" />
 
 
