--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -129,6 +129,7 @@
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay4s"
+            android:layout_below = "@+id/tricepPushdownDescription"
             android:layout_gravity="right|bottom"
             />
 
