--- a/app/src/main/res/layout/fragment_weightloss_day_five.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_five.xml
@@ -117,6 +117,7 @@
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay5w"
+            android:layout_below = "@+id/burpiesDetail"
             android:layout_gravity="right|bottom"
             />
 
