--- a/app/src/main/res/layout/fragment_weightloss_day_four.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_four.xml
@@ -115,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:text="Workout Complete!"
                 android:id="@+id/completeDay4w"
+                android:layout_below = "@+id/cardioDetail"
                 android:layout_gravity="right|bottom"
                 />
 
