--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -97,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/shrugpic"
-            android:src="@drawable/shrug"
+            android:src="@drawable/shrugs2"
             android:layout_below="@+id/shrug"
             android:clickable="true"
             android:layout_gravity="center_horizontal"
