--- a/app/src/main/res/layout/fragment_fp__body__building.xml
+++ b/app/src/main/res/layout/fragment_fp__body__building.xml
@@ -60,4 +60,12 @@
         android:layout_gravity="center"
         android:background="#46d4e8" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="How To"
+        android:id="@+id/howTo"
+        android:layout_gravity="center_horizontal|bottom"
+        android:background="#46d4e8" />
+
 </FrameLayout>
