--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,6 +19,6 @@
         android:id="@+id/list"
         android:title=""
         android:showAsAction="always|withText"
-        android:icon="@drawable/ic_list_black_24dp"
+        android:icon="@drawable/ic_launcher"
         />
 </menu>
