--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,6 +18,7 @@
     <item
         android:id="@+id/list"
         android:title=""
+        android:orderInCategory="0"
         android:showAsAction="always|withText"
         android:icon="@drawable/ic_launcher"
         />
