--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,7 +19,7 @@
         android:id="@+id/home"
         android:title="home"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_list_black_24dp"
         android:showAsAction="always"
         />
 </menu>
