--- a/app/src/main/res/layout/fragment_body_building_one.xml
+++ b/app/src/main/res/layout/fragment_body_building_one.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.BodyBuildingDayOne"
     android:id="@+id/containerFitnessP"
-    android:background="#010100"
+    android:background="#212121"
     >
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -132,7 +132,9 @@
         android:text="Workout Complete!"
         android:id="@+id/completeDay1bb"
         android:layout_below = "@+id/hamstringDetail"
-        android:layout_gravity="right|bottom" />
+        android:layout_gravity="right|bottom"
+        android:background="#ff6655"
+        />
 
 
     </LinearLayout>>
