--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.BodyBuildingDayTwo"
     android:id="@+id/containerFitnessP"
-    android:background="#010100"
+    android:background="#212121"
     >
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -131,7 +131,7 @@
         android:text="Workout Complete!"
         android:id="@+id/completeDay2bb"
                 android:layout_below = "@+id/pushupDetail"
-
+        android:background="#ff6655"
                 android:layout_gravity="right|bottom" />
 
 </LinearLayout>>
