--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#010101"
+    android:background="#212121"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:text="EDIT PROFILE"
-            android:textColor="#46d4e8"
+            android:textColor="#27c8f9"
             android:layout_marginTop="50dp"
             android:textSize="50dp"
             android:layout_height="wrap_content"
