--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -10,13 +10,13 @@
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#010100">
+            android:background="#212121">
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:orientation="vertical"
-            android:background="#010100">
+            android:background="#212121">
 
 
     <TextView
@@ -37,7 +37,7 @@
                 android:text="Set Bench"
                 android:id="@+id/setBench"
                 android:layout_below="@+id/benchText"
-                android:background="#46d4e8" />
+                android:background="#ff6655" />
 
 
             <TextView
@@ -72,7 +72,7 @@
                 android:id="@+id/setSquat"
                 android:layout_below="@+id/squatText"
                 android:layout_alignParentStart="true"
-                android:background="#46d4e8" />
+                android:background="#ff6655" />
 
             <TextView
             android:layout_width="wrap_content"
@@ -103,7 +103,7 @@
                 android:id="@+id/setDeadLift"
                 android:layout_below="@+id/deadliftText"
                 android:layout_alignParentStart="true"
-                android:background="#46d4e8" />
+                android:background="#ff6655" />
 
             <TextView
             android:layout_width="wrap_content"
@@ -137,7 +137,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="83dp"
                 android:layout_below="@+id/mileText"
-                android:background="#46d4e8" />
+                android:background="#ff6655" />
 
             <TextView
             android:layout_width="wrap_content"
