--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.StrengthDayThree"
     android:id="@+id/containerFitnessP"
-    android:background="#010100">
+    android:background="#212121">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
@@ -121,6 +121,7 @@
             android:id="@+id/completeDay3s"
             android:layout_below = "@+id/shrugDescription"
             android:layout_gravity="right|bottom"
+            android:background="#ff6655"
             />
 
 
