--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:id="@+id/linview"
-        android:background="#b3010101"
+        android:background="#212121"
         >
 
 
@@ -28,7 +28,7 @@
             android:layout_height="170dp"
             android:src="@drawable/ic_camera"
             app:civ_border_width="2dp"
-            app:civ_border_color="#d10200"
+            app:civ_border_color="#ff6655"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true" />
 
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="Take Pic"
             android:id="@+id/pic"
-            android:background="#46d4e8"
+            android:background="#ff6655"
             android:layout_alignBaseline="@+id/textView1"
             android:layout_alignBottom="@+id/textView1"
             android:layout_toEndOf="@+id/overBmi" />
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editprofilebutton"
             android:text="editProfile"
-            android:background="#46d4e8"
+            android:background="#ff6655"
             android:layout_alignTop="@+id/pic"
             android:layout_toEndOf="@+id/textView1" />
 
@@ -141,7 +141,7 @@
             android:layout_height="wrap_content"
             android:text="Change Attributes"
             android:id="@+id/weightButton"
-            android:background="#46d4e8"
+            android:background="#ff6655"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/CurrH"
 
