--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.StrengthDayFour"
     android:id="@+id/containerFitnessP"
-    android:background="#010100">
+    android:background="#212121">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
@@ -131,6 +131,7 @@
             android:id="@+id/completeDay4s"
             android:layout_below = "@+id/tricepPushdownDescription"
             android:layout_gravity="right|bottom"
+            android:background="#ff6655"
             />
 
     </LinearLayout>>
