--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.StrengthDayOne"
     android:id="@+id/containerFitnessP"
-    android:background="#010100"
+    android:background="#212121"
     >
 
     <!-- TODO: Update blank fragment layout -->
@@ -127,7 +127,9 @@
                 android:layout_below = "@+id/inclineBenchDescription"
                 android:layout_gravity="right|bottom"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="false" />
+                android:layout_alignParentStart="false"
+                android:background="#ff6655"
+                />
 
 
         </RelativeLayout>>
