--- a/app/src/main/res/layout/fragment_weightloss_day_five.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_five.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.BodyBuildingDayOne"
     android:id="@+id/containerFitnessP"
-    android:background="#010100"
+    android:background="#212121"
     >
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -119,6 +119,7 @@
             android:id="@+id/completeDay5w"
             android:layout_below = "@+id/burpiesDetail"
             android:layout_gravity="right|bottom"
+            android:background="#ff6655"
             />
 
     </LinearLayout>>
