--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -2,20 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.BodyBuildingDayOne"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/background3"
+    android:background="#212121"
     >
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:fillViewport="false"
-        android:background="#010100">
+        android:background="#212121">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:orientation="vertical"
-        android:background="#010100">
+        android:background="#212121">
 
         <TextView
             android:layout_width="wrap_content"
@@ -119,6 +119,7 @@
             android:id="@+id/completeDay1w"
             android:layout_below = "@+id/jumpropeDetail"
             android:layout_gravity="right|bottom"
+            android:background="#ff6655"
             />
 
 
