--- a/app/src/main/res/layout/fragment_weightloss_howto.xml
+++ b/app/src/main/res/layout/fragment_weightloss_howto.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.WeightlossHowto"
-    android:background="@drawable/background3"
+    android:background="#212121"
     >
 
     <!-- TODO: Update blank fragment layout -->
@@ -47,7 +47,7 @@
             android:id="@+id/textView24"
             android:layout_gravity="right|center_vertical"
             android:textColor="#FFFFFF"
-            android:background="#010100" />
+            android:background="#212121" />
 
 
     </LinearLayout>>
