--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -12,17 +12,18 @@
         android:id="@+id/LeaderTitle"
         android:textSize="20dp"
         android:layout_below="@+id/PointsView"
-        android:background="#46d4e8"
+        android:background="#010101"
         android:autoText="true"
-        android:textColor="#010101" />
+        android:textColor="#46d4e8" />
 
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
             android:id="@+id/listView4"
-            android:divider="@null"
+            android:divider="#010101"
             android:layout_gravity="center"
             android:textColor="@android:color/white"
+            android:dividerHeight="10dp"
             android:textStyle="normal|italic"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/LeaderTitle"
